Update readme, gitignore, and template

--- a/.gitignore
+++ b/.gitignore
@@ -129,4 +129,5 @@ dmypy.json
 
 # Excel documents used
 *.xlsx
-!template.xlsx	#keep this Excel file
+!Template.xlsx	#keep this Excel file
+!template.xlsx
